--- a/CORE/Samples/ClientBLOB/Lazarus/ClientBLOB.lpi
+++ b/CORE/Samples/ClientBLOB/Lazarus/ClientBLOB.lpi
@@ -33,13 +33,16 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="3">
       <Item1>
-        <PackageName Value="resteasyobjectscore"/>
+        <PackageName Value="FCL"/>
       </Item1>
       <Item2>
-        <PackageName Value="LCL"/>
+        <PackageName Value="resteasyobjectscore"/>
       </Item2>
+      <Item3>
+        <PackageName Value="LCL"/>
+      </Item3>
     </RequiredPackages>
     <Units Count="2">
       <Unit0>
